2006-03-01  Paul Eggert  <eggert@cs.ucla.edu>

	* extensions.m4 (gl_USE_SYSTEM_EXTENSIONS): Use "=" with "test",
	not "==".  Reported by Ralf Wildenhues.

2006-02-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* mkdir-p.m4 (gl_MKDIR_PARENTS): Require gl_FUNC_LCHMOD and
	gl_CHDIR_SAFER.

2006-02-16  Eric Blake  <ebb9@byu.net>

	Sync from gnulib.
	* sys_socket_h.m4: New file. Solves 'present but cannot compile'
	warnings on cygwin, which cannot use ws2tcpip.h.
	* socklen.m4 (gl_TYPE_SOCKLEN_T): Use gl_HEADER_SYS_SOCKET.
	Don't use ws2tcpip.h if sys/socket.h works.
	* getaddrinfo.m4 (gl_PREREQ_GETADDRINFO): Use
	gl_HEADER_SYS_SOCKET.
	(gl_GETADDRINFO): Don't use ws2tcpip.h when sys/socket.h is
	present.

2006-02-14  Simon Josefsson  <jas@extundo.com>

	Sync from gnulib.
	* getaddrinfo.m4: Look for getaddrinfo inside ws2tcip.h and
	-lws2_32.  Protect sys/socket.h and netdb.h #include's.  Include
	ws2tcpip.h with WINVER=0x0501.  All for mingw32.
	* socklen.m4: Look in ws2tcpip.h too, for mingw32.

2006-02-05  Paul Eggert  <eggert@cs.ucla.edu>

	* extensions.m4 (gl_USE_SYSTEM_EXTENSIONS): Don't #define
	__EXTENSIONS__ if this causes compilation to fail.  Problem
	reported by Nelson H. F. Beebe with Solaris 10 and Sun C 5.7
	c89 -D_XOPEN_SOURCE -D_XOPEN_SOURCE_EXTENDED.

2006-01-26  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool.m4 (AC_HEADER_STDBOOL): Sync from gnulib.
	Use 'defined __GNUC__' rather than __GNUC__.

2006-01-25  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool.m4: Merge from gnulib; we still don't quite match
	exactly, but we're getting closer.
	(AC_HEADER_STDBOOL): Add some comments.

2006-01-24  Jim Meyering  <jim@meyering.net>

	* openat.m4 (gl_FUNC_OPENAT): Add AC_LIBSOURCES([intprops.h]).
	Reported by Mark D. Baushke.

2006-01-23  Paul Eggert  <eggert@cs.ucla.edu>

	* getopt.m4 (gl_PREREQ_GETOPT): Check for getenv decl.

2006-01-20  Paul Eggert  <eggert@cs.ucla.edu>

	* lib-ignore.m4 (gl_IGNORE_UNUSED_LIBRARIES): Use -Wl,-z,ignore