@@ -1,11 +1,13 @@
-#serial 14
+#serial 15
 
 dnl From Jim Meyering.
 dnl Check for the nanosleep function.
 dnl If not found, use the supplied replacement.
 dnl
 
-# Copyright (C) 1999, 2000, 2001, 2003, 2004, 2005 Free Software Foundation, Inc.
+# Copyright (C) 1999, 2000, 2001, 2003, 2004, 2005, 2006 Free Software
+# Foundation, Inc.
+
 # This file is free software; the Free Software Foundation
 # gives unlimited permission to copy and/or distribute it,
 # with or without modifications, as long as this notice is preserved.
@@ -26,6 +28,9 @@ AC_DEFUN([gl_FUNC_NANOSLEEP],
  AC_CACHE_CHECK([whether nanosleep works],
   jm_cv_func_nanosleep_works,
   [
+   dnl Persuade glibc and Solaris <time.h> to declare nanosleep.
+   AC_REQUIRE([gl_USE_SYSTEM_EXTENSIONS])
+
    AC_REQUIRE([AC_HEADER_TIME])
    AC_CHECK_HEADERS_ONCE(sys/time.h)
    AC_TRY_RUN([
